@@ -28,7 +28,6 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.StringReader;
-import java.util.Iterator;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -70,8 +69,6 @@ import org.openscience.cdk.tools.LoggingToolFactory;
  *   molecule.getProperty(CDKConstants.TITLE);
  * </pre>
  *
- * @cdk.module io
- * @cdk.githash
  * @cdk.iooptions
  *
  * @author     steinbeck
@@ -89,8 +86,8 @@ import org.openscience.cdk.tools.LoggingToolFactory;
 @Deprecated
 public class MDLReader extends DefaultChemObjectReader {
 
-    BufferedReader               input          = null;
-    private static ILoggingTool  logger         = LoggingToolFactory.createLoggingTool(MDLReader.class);
+    BufferedReader               input;
+    private static final ILoggingTool  logger         = LoggingToolFactory.createLoggingTool(MDLReader.class);
 
     private BooleanIOSetting     forceReadAs3DCoords;
     private static final Pattern TRAILING_SPACE = Pattern.compile("\\s+$");
@@ -153,10 +150,10 @@ public class MDLReader extends DefaultChemObjectReader {
         if (IChemModel.class.equals(classObject)) return true;
         if (IAtomContainer.class.equals(classObject)) return true;
         Class<?>[] interfaces = classObject.getInterfaces();
-        for (int i = 0; i < interfaces.length; i++) {
-            if (IChemFile.class.equals(interfaces[i])) return true;
-            if (IChemModel.class.equals(interfaces[i])) return true;
-            if (IAtomContainer.class.equals(interfaces[i])) return true;
+        for (Class<?> anInterface : interfaces) {
+            if (IChemFile.class.equals(anInterface)) return true;
+            if (IChemModel.class.equals(anInterface)) return true;
+            if (IAtomContainer.class.equals(anInterface)) return true;
         }
         Class superClass = classObject.getSuperclass();
         if (superClass != null) return this.accepts(superClass);
@@ -248,7 +245,7 @@ public class MDLReader extends DefaultChemObjectReader {
                         String fieldName = null;
                         if (str.startsWith("> ")) {
                             // ok, should extract the field name
-                            str.substring(2); // String content =
+                            str = str.substring(2); // String content =
                             int index = str.indexOf('<');
                             if (index != -1) {
                                 int index2 = str.substring(index).indexOf('>');
@@ -311,18 +308,18 @@ public class MDLReader extends DefaultChemObjectReader {
     private IAtomContainer readMolecule(IAtomContainer molecule) throws CDKException {
         logger.debug("Reading new molecule");
         int linecount = 0;
-        int atoms = 0;
-        int bonds = 0;
-        int atom1 = 0;
-        int atom2 = 0;
-        int order = 0;
-        IBond.Stereo stereo = (IBond.Stereo) CDKConstants.UNSET;
+        int atoms;
+        int bonds;
+        int atom1;
+        int atom2;
+        int order;
+        IBond.Display display = IBond.Display.Solid;
         int RGroupCounter = 1;
-        int Rnumber = 0;
-        String[] rGroup = null;
-        double x = 0.0;
-        double y = 0.0;
-        double z = 0.0;
+        int Rnumber;
+        String[] rGroup;
+        double x;
+        double y;
+        double z;
         double totalX = 0.0;
         double totalY = 0.0;
         double totalZ = 0.0;
@@ -371,9 +368,9 @@ public class MDLReader extends DefaultChemObjectReader {
                     throw new CDKException("This file must be read with the MDLV3000Reader.");
                 }
             }
-            atoms = Integer.valueOf(line.substring(0, 3).trim()).intValue();
+            atoms = Integer.parseInt(line.substring(0, 3).trim());
             logger.debug("Atomcount: " + atoms);
-            bonds = Integer.valueOf(line.substring(3, 6).trim()).intValue();
+            bonds = Integer.parseInt(line.substring(3, 6).trim());
             logger.debug("Bondcount: " + bonds);
 
             // read ATOM block
@@ -387,9 +384,9 @@ public class MDLReader extends DefaultChemObjectReader {
                             trailingSpaceMatcher.end());
                     line = trailingSpaceMatcher.replaceAll("");
                 }
-                x = new Double(line.substring(0, 10).trim()).doubleValue();
-                y = new Double(line.substring(10, 20).trim()).doubleValue();
-                z = new Double(line.substring(20, 30).trim()).doubleValue();
+                x = Double.valueOf(line.substring(0, 10).trim());
+                y = Double.valueOf(line.substring(10, 20).trim());
+                z = Double.valueOf(line.substring(20, 30).trim());
                 // *all* values should be zero, not just the sum
                 totalX += Math.abs(x);
                 totalY += Math.abs(y);
@@ -503,11 +500,11 @@ public class MDLReader extends DefaultChemObjectReader {
                 //shk3: This reads shifts from after the molecule. I don't think this is an official format, but I saw it frequently 80=>78 for alk
                 if (line.length() >= 78) {
                     double shift = Double.parseDouble(line.substring(69, 80).trim());
-                    atom.setProperty("first shift", new Double(shift));
+                    atom.setProperty("first shift", shift);
                 }
                 if (line.length() >= 87) {
                     double shift = Double.parseDouble(line.substring(79, 87).trim());
-                    atom.setProperty("second shift", new Double(shift));
+                    atom.setProperty("second shift", shift);
                 }
 
                 molecule.addAtom(atom);
@@ -521,9 +518,7 @@ public class MDLReader extends DefaultChemObjectReader {
                 }
             } else if (totalZ == 0.0 && !forceReadAs3DCoords.isSet()) {
                 logger.info("Total 3D Z is 0.0, interpreting it as a 2D structure");
-                Iterator<IAtom> atomsToUpdate = molecule.atoms().iterator();
-                while (atomsToUpdate.hasNext()) {
-                    IAtom atomToUpdate = (IAtom) atomsToUpdate.next();
+                for (IAtom atomToUpdate : molecule.atoms()) {
                     Point3d p3d = atomToUpdate.getPoint3d();
                     atomToUpdate.setPoint2d(new Point2d(p3d.x, p3d.y));
                     atomToUpdate.setPoint3d(null);
@@ -535,26 +530,26 @@ public class MDLReader extends DefaultChemObjectReader {
             for (int f = 0; f < bonds; f++) {
                 line = input.readLine();
                 linecount++;
-                atom1 = java.lang.Integer.valueOf(line.substring(0, 3).trim()).intValue();
-                atom2 = java.lang.Integer.valueOf(line.substring(3, 6).trim()).intValue();
-                order = java.lang.Integer.valueOf(line.substring(6, 9).trim()).intValue();
+                atom1 = Integer.parseInt(line.substring(0, 3).trim());
+                atom2 = Integer.parseInt(line.substring(3, 6).trim());
+                order = Integer.parseInt(line.substring(6, 9).trim());
                 if (line.length() > 12) {
-                    int mdlStereo = Integer.valueOf(line.substring(9, 12).trim());
+                    int mdlStereo = Integer.parseInt(line.substring(9, 12).trim());
                     if (mdlStereo == 1) {
                         // MDL up bond
-                        stereo = IBond.Stereo.UP;
+                        display = IBond.Display.WedgeBegin;
                     } else if (mdlStereo == 6) {
                         // MDL down bond
-                        stereo = IBond.Stereo.DOWN;
+                        display = IBond.Display.WedgedHashBegin;
                     } else if (mdlStereo == 0) {
                         // bond has no stereochemistry
-                        stereo = IBond.Stereo.NONE;
+                        display = IBond.Display.Solid;
                     } else if (mdlStereo == 4) {
                         //MDL up or down bond
-                        stereo = IBond.Stereo.UP_OR_DOWN;
+                        display = IBond.Display.Wavy;
                     } else if (mdlStereo == 3) {
                         //MDL e or z undefined
-                        stereo = IBond.Stereo.E_OR_Z;
+                        display = IBond.Display.Crossed;
                     }
                 } else {
                     logger.warn("Missing expected stereo field at line: " + line);
@@ -570,24 +565,17 @@ public class MDLReader extends DefaultChemObjectReader {
                     IBond.Order cdkOrder = IBond.Order.SINGLE;
                     if (order == 2) cdkOrder = IBond.Order.DOUBLE;
                     if (order == 3) cdkOrder = IBond.Order.TRIPLE;
-                    if (stereo != null) {
-                        newBond = molecule.getBuilder().newInstance(IBond.class, a1, a2, cdkOrder, stereo);
-                    } else {
-                        newBond = molecule.getBuilder().newInstance(IBond.class, a1, a2, cdkOrder);
-                    }
+                    newBond = molecule.newBond(a1, a2, cdkOrder);
+                    newBond.setDisplay(display);
                 } else if (order == 4) {
                     // aromatic bond
-                    if (stereo != null) {
-                        newBond = molecule.getBuilder().newInstance(IBond.class, a1, a2, IBond.Order.SINGLE, stereo);
-                    } else {
-                        newBond = molecule.getBuilder().newInstance(IBond.class, a1, a2, IBond.Order.SINGLE);
-                    }
+                    newBond = molecule.newBond(a1, a2, IBond.Order.SINGLE);
+                    newBond.setDisplay(display);
                     // mark both atoms and the bond as aromatic
-                    newBond.setFlag(CDKConstants.ISAROMATIC, true);
-                    a1.setFlag(CDKConstants.ISAROMATIC, true);
-                    a2.setFlag(CDKConstants.ISAROMATIC, true);
+                    newBond.setFlag(IChemObject.AROMATIC, true);
+                    a1.setFlag(IChemObject.AROMATIC, true);
+                    a2.setFlag(IChemObject.AROMATIC, true);
                 }
-                molecule.addBond(newBond);
             }
 
         } catch (IOException | CDKException | IllegalArgumentException exception) {
